--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
+    "@astrojs/netlify": "^5.5.1",
+    "@astrojs/vercel": "^7.8.0",
     "@iconify-json/ri": "^1.1.22",
+    "@playform/inline": "^0.1.0",
     "@popperjs/core": "^2.11.8",
     "aos": "^2.3.4",
     "astro": "^4.14.5",
